// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifExpertApp/> Should show a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="First"
      key="First"
    />
    <GifGrid
      category="Second"
      key="Second"
    />
  </ol>
</Fragment>
`;

exports[`Test <GifExpertApp/> Should show the component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
